--- a/CandidatosProyect.Api/CandidatosProyect.Api.csproj
+++ b/CandidatosProyect.Api/CandidatosProyect.Api.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
     <PackageReference Include="NSwag.AspNetCore" Version="13.9.4" />
     <PackageReference Include="NSwag.CodeGeneration.CSharp" Version="13.9.4" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
   </ItemGroup>
 
   <ItemGroup>
