--- a/CandidatosProyect.Client/CandidatosProyect.Client.csproj
+++ b/CandidatosProyect.Client/CandidatosProyect.Client.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\CandidatosProyect.Api\CandidatosProyect.Api.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Logs\" />
+  </ItemGroup>
+
 </Project>
