--- a/CandidatosProyect.Api/CandidatosProyect.Api.csproj
+++ b/CandidatosProyect.Api/CandidatosProyect.Api.csproj
@@ -9,6 +9,10 @@
     <PackageReference Include="NSwag.AspNetCore" Version="13.9.4" />
     <PackageReference Include="NSwag.CodeGeneration.CSharp" Version="13.9.4" />
     <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
+    <PackageReference Include="ServiceStack.Text" Version="5.10.2" />
   </ItemGroup>
 
   <ItemGroup>
