--- a/CandidatosProyect.Api/CandidatosProyect.Api.csproj
+++ b/CandidatosProyect.Api/CandidatosProyect.Api.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.6.0" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
     <PackageReference Include="ServiceStack.Text" Version="5.10.2" />
   </ItemGroup>
